# python-nng

./: .gitmodules  CMakeLists.txt  LICENSE  PERFORMANCE.md  README.md  pyproject.toml
.github/workflows/: build.yml
benchmarks/: __init__.py  reporting.py  requirements-bench.txt  run_benchmarks.py  runner.py
benchmarks/_core/: common.py  nng_import.py  stats.py
benchmarks/competitors/: base.py  c_nng_bench.py  nng_async.py  nng_async1.py  nng_async2.py  nng_async3.py  nng_async4.py  nng_async5.py  nng_async6.py  nng_async7.py  nng_async_old.py  nng_sync.py  nng_sync1.py  nng_sync2.py  pynng_async.py  pynng_sync.py  python_raw.py  python_raw2.py  python_raw_async.py  python_raw_sync.py  zmq_async.py  zmq_sync.py
benchmarks/competitors/c_nng/: CMakeLists.txt  bench_client.c  bench_client_lat.c  bench_client_ops.c  bench_common.h  bench_inproc_lat.c  bench_inproc_ops.c  bench_server.c
builtin_tls/: pyproject.toml
examples/PAIR/dual_channel/: client.py  server.py
examples/PAIR/secure_subscriber/: README.md  bench_overhead.py  client.py  common.py  fake_client.py  fake_server.py  gen_keys.py  server.py
examples/PAIR/secure_subscriber/keys/: client_sign.key  fake_client_sign.key  fake_server_sign.key  server_sign.key
examples/PAIR/secure_subscriber/secure_sockets/: protocol_utils.py  secure_pair.py  secure_rep.py  secure_req.py  security_utils.py
examples/PAIR/simple/: client.py  server.py
examples/PUB-SUB/logging/: listener.py  process.py
examples/PULL-PUSH/threadpool/: threadpool.py
examples/REP-REQ/async/: client.py  server.py
examples/REP-REQ/conversation/: client.py  server.py
examples/REP-REQ/multi_clients_servers/: main.py  server.py  worker.py
examples/REP-REQ/multiprocess/: main.py  server.py  worker.py
examples/REP-REQ/parallel_requests_async/: client.py  server.py
examples/REP-REQ/simple/: client.py  server.py
examples/REP-REQ/simple_async/: client.py  server.py
examples/RESPONDENT-SURVEYOR/service_discovery/: _responder.py  discover.py  service.py  start_services.py
examples/TLS/: _pki.py  mtls.py  one_way.py  rejected.py
nng/: __init__.py  _aio.pxi  _aio_async.pxi  _aio_cb_sync.pxi  _context.pxi  _cpp.pxd  _decls.pxd  _dialer.pxi  _errors.pxi  _listener.pxi  _message.pxi  _mutex.pxd  _nng.pyi  _nng.pyx  _pipe_filter.pxi  _socket.pxi  _tls.pxi  _trampoline.h
nng/cpp/: aio.hpp  context.hpp  dialer.hpp  dispatch.hpp  factory.hpp  listener.hpp  message.hpp  pipe.hpp  pipe_filter.hpp  pipe_notif.hpp  platform.hpp  socket.hpp  tls_config.hpp
stubs/: generate_stubs.py
tests/: conftest.py  test_context.py  test_errors.py  test_pair.py  test_pipe.py  test_pipe_filter.py  test_pubsub.py  test_reqrep.py  test_tcp_options.py  test_threadsafety.py  test_tls.py
