[build-system]
requires = ["scikit-build-core>=0.10", "cython>=3.1.6", "cmake>=3.20"]
build-backend = "scikit_build_core.build"

[project]
name = "nng"
version = "0.2.0"
description = "High-performance Python bindings for nng (nanomsg-next-gen)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = [
    "LICENSE",
    "thirdparty/nng/LICENSE.txt",
]
keywords = ["nng", "nanomsg", "messaging", "pubsub", "ipc", "request-reply"]
authors = [
    { name = "Axel Davy" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/axeldavy/python-nng"
Repository = "https://github.com/axeldavy/python-nng"
"Bug Tracker" = "https://github.com/axeldavy/python-nng/issues"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["nng"]
sdist.include = ["thirdparty/nng/**"]

[tool.scikit-build.cmake.define]
NNG_TESTS = "OFF"
NNG_TOOLS = "OFF"
NNG_ENABLE_NNGCAT = "OFF"
BUILD_SHARED_LIBS = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
